tests/files/ok/SuperInConstructor.krna
struct CustomClass {
    s: string
    fn (self) {
        self.s = "Hello, World!"
        super<Object>()
    }

    fn make(self) -> String {
        super<CustomClass>.toString()
        ""
    }
}