tests/files/fail/InvalidInitCall.krna
struct CustomClass {

    fn make(self) -> String {
        super<CustomClass>.toString()
        super<Object>()
        ""
    }
}
